Added dynamic friendList update